# do

./: .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  argparser.yaml  check_ciphers.py  check_ip_blacklist.py  check_updates.py  check_versions.py  codecov.yml  dev-requirements.txt  install_prerequisites.sh  make  md2text.py  mypy.ini  pre-commit-projects-config-with-mypy.yaml  pre-commit-projects-config.yaml  pyproject.toml  renovate.json  requirements.dev.txt  requirements.txt  requirements.types.txt  run.py  setup.cfg  setup.py
.deadpendency/: config.yaml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  compose.yml  docker-build.yml  mypy.yml  ossar-analysis.yml  publish-to-pypi.yml  pytests.yml  semgrep-analysis.yml  static-analysis.yml
controller/: __init__.py  __main__.py  app.py  argparser.yaml  arguments.py  builds.py  compose.py  conf_utilities.py  configuration.py  dockerizing.py  gitter.py  packages.py  project.py  py.typed  python_packages.py  scaffold.py  services_utilities.py  swarm.py  templating.py  utilities.py
controller/builds/: README.md  banner.sh  print_versions.sh  renovate.json  sync_banners.sh
controller/commands/: __init__.py  add.py  ancestors.py  backup.py  build.py  check.py  create.py  custom.py  dhparam.py  diagnostic.py  dump.py  formatter.py  init.py  install.py  interfaces.py  list.py  logs.py  password.py  pull.py  reload.py  remove.py  restart.py  restore.py  run.py  scale.py  shell.py  ssl.py  start.py  status.py  stop.py  test.py  tuning.py  update.py  upgrade.py  verify.py  version.py  volatile.py
controller/confs/: angular-development.yml  angular.yml  angularjs.yml  backend.yml  development.yml  projects_defaults.yaml  projects_prod_defaults.yaml  react.yml  swarm_angular_prod_options.yml  swarm_options.yml  volumes_local.yml  volumes_nfs.yml
controller/deploy/: __init__.py  builds.py  compose.py  compose_v2.py  docker.py  registry.py  swarm.py
controller/templates/: activate_account.html.j2  blocked_credentials.html.j2  browserconfig.xml.j2  class.py  codecov.yml.j2  codeql-analysis.yml.j2  commons.yml.j2  component_template.html.j2  component_template.ts.j2  component_test_template.spec.ts.j2  custom.footer.html  custom.footer.html.j2  custom.footer.ts  custom.footer.ts.j2  custom.module.ts  custom.module.ts.j2  custom.navbar.brand.html.j2  custom.navbar.controls.html.j2  custom.navbar.links.html.j2  custom.navbar.ts  custom.navbar.ts.j2  custom.profile.html.j2  custom.profile.ts.j2  custom.project.options.ts.j2  customization.py.j2  customization.ts.j2  cypress_template.spec.ts.j2  development.yml  development.yml.j2  endpoint_template.py.j2  endpoint_test_template.py.j2  favicon.ico.j2  flake8.j2  get.yaml  gitattributes.j2  github_actions-backend.yml.j2  github_actions-cypress.yml.j2  github_actions-frontend.yml.j2  github_actions-mypy.yml.j2  gitignore.j2  (+36 more)
controller/utilities/: __init__.py  configuration.py  git.py  services.py  system.py  tables.py
do/: __init__.py  __main__.py  app.py  argparser.yaml  arguments.py  builds.py  compose.py  configuration.py  dockerizing.py  gitter.py  input.py  logging.ini  main.py  params.py  project.py
do/utils/: logs.py  myyaml.py
docs/: Makefile  conf.py  index.rst  quickstart.md  requirements.txt
docs/_autosummary/: controller.app.rst  controller.commands.add.rst  controller.commands.backup.rst  controller.commands.backup_modules.mariadb.rst  controller.commands.backup_modules.neo4j.rst  controller.commands.backup_modules.postgres.rst  controller.commands.backup_modules.rabbit.rst  controller.commands.backup_modules.redis.rst  controller.commands.backup_modules.rst  controller.commands.build.rst  controller.commands.check.rst  controller.commands.compose.logs.rst  controller.commands.compose.remove.rst  controller.commands.compose.rst  controller.commands.compose.scale.rst  controller.commands.compose.stop.rst  controller.commands.create.rst  controller.commands.dump.rst  controller.commands.init.rst  controller.commands.install.rst  controller.commands.interfaces.rst  controller.commands.list.rst  controller.commands.password.rst  controller.commands.password_modules.backend.rst  controller.commands.password_modules.flower.rst  controller.commands.password_modules.mariadb.rst  controller.commands.password_modules.neo4j.rst  controller.commands.password_modules.postgres.rst  controller.commands.password_modules.rabbit.rst  controller.commands.password_modules.redis.rst  controller.commands.password_modules.registry.rst  controller.commands.password_modules.rst  controller.commands.pull.rst  controller.commands.reload.rst  controller.commands.restart.rst  controller.commands.restore.rst  controller.commands.restore_modules.mariadb.rst  controller.commands.restore_modules.neo4j.rst  controller.commands.restore_modules.postgres.rst  controller.commands.restore_modules.rabbit.rst  (+40 more)
notes/: async.md  testing.md  todo.md
rapydo/: __init__.py  utils
rapydo/do/: __init__.py  (+10 more)
tasks/: pomodoro.TODO
tests/: STOPtest_cli.py  __init__.py  conftest.py  test_0_base.py  test_2_add_upgrade.py  test_3_init_check_update.py  test_4_build_pull_ancestors.py  test_5_start_shell_status_logs_restart_remove.py  test_add.py  test_add_upgrade.py  test_all.py  test_backup_restore_mariadb.py  test_backup_restore_neo4j.py  test_backup_restore_postgres.py  test_backup_restore_rabbit.py  test_backup_restore_redis.py  test_backup_restore_tuning.py  test_backup_restore_tuning_mariadb.py  test_backup_restore_tuning_neo4j.py  test_backup_restore_tuning_postgres.py  test_backup_restore_tuning_rabbit.py  test_backup_restore_tuning_redis.py  test_base.py  test_basic.py  test_build_ancestors.py  test_build_pull.py  test_build_pull_ancestors.py  test_check.py  test_check_update.py  test_cli.py  test_cli.py.STOP  test_create.py  test_cronjobs.py  test_diagnostic.py  test_dump.py  test_empty.py  test_init.py  test_init_check_update.py  test_install.py  test_interfaces.py  (+55 more)
(+214 files in other folders)
