[project]
name = "rapydo"
version = "3.0"
description = "Manage and deploy projects based on RAPyDo framework"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dynamic = ["dependencies", "optional-dependencies"]
readme = "README.rst"
keywords = ["http", "api", "rest", "docker", "docker-compose", "docker-swarm", "rapydo"]
classifiers=[
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements.dev.txt"]}, types = {file = ["requirements.types.txt"]}}

[project.urls]
homepage = "https://rapydo.github.io/docs"
documentation = "https://do.readthedocs.io"
repository = "https://github.com/rapydo/do"
# changelog = "https://github.com/rapydo/do"

[project.scripts]
rapydo = "controller.__main__:main"

[build-system]
requires = ["setuptools>=64.0", "wheel>=0.34.0"]
build-backend = "setuptools.build_meta"
# build-backend = "poetry.masonry.api"

[tool.setuptools.package-data]
controller = ["py.typed", "templates/*", "confs/*"]

[tool.setuptools.packages.find]
exclude = ["stubs"]

[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.isort]
py_version = 38
line_length = 88
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true

