[metadata]
name = rapydo
version = attr: controller.__version__
description = Manage and deploy projects based on RAPyDo framework
long_description = file: README.rst, LICENSE
url = https://github.com/rapydo/do
keywords = http api rest docker docker-compose docker-swarm rapydo
license = MIT
classifiers =
    Programming Language :: Python
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8, <4
zip_safe = False
include_package_data = True
packages = find:

# install_requires =
#   python-on-whales==0.40.0
#   python-dateutil
#   pytz
#   loguru
#   jinja2
#   sultan==0.9.1
#   plumbum
#   glom
#   GitPython==3.1.27
#   PyYAML==6.0
#   pip>=21.3
#   requests>=2.6.1
#   typer[all]==0.4.1
#   click==8.1.2
#   zxcvbn
#   packaging

[options.package_data]
controller = py.typed, templates/*, confs/*

[options.entry_points]
console_scripts =
    rapydo = controller.__main__:main

# [options.extras_require]
# dev =
#   pytest
#   pytest-cov
#   pytest-timeout
#   pytest-sugar
#   freezegun
#   Faker

[options.packages.find]
exclude =
    tests*
